--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -138,3 +138,7 @@ input[type='number']::-webkit-outer-spin-button {
 .vis-time-axis .vis-grid.vis-minor {
   border-color: #f5f5f5;
 }
+
+.highlight-number {
+  @apply text-blue-800 font-bold px-1;
+}
